{
  "version": 4,
  "terraform_version": "1.1.9",
  "serial": 23,
  "lineage": "b1e54d86-9de7-5e7b-47fc-27b2241e507b",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-rdp",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "3389"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-07-27T19:11:59.646-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/devops-engineer-334019/global/firewalls/kopicloud-fw-allow-rdp",
            "log_config": [],
            "name": "kopicloud-fw-allow-rdp",
            "network": "https://www.googleapis.com/compute/v1/projects/devops-engineer-334019/global/networks/kopicloud-vpc",
            "priority": 1000,
            "project": "devops-engineer-334019",
            "self_link": "https://www.googleapis.com/compute/v1/projects/devops-engineer-334019/global/firewalls/kopicloud-fw-allow-rdp",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "rdp"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-sql",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "1433"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-07-27T19:11:59.677-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/devops-engineer-334019/global/firewalls/kopicloud-fw-allow-sql",
            "log_config": [],
            "name": "kopicloud-fw-allow-sql",
            "network": "https://www.googleapis.com/compute/v1/projects/devops-engineer-334019/global/networks/kopicloud-vpc",
            "priority": 1000,
            "project": "devops-engineer-334019",
            "self_link": "https://www.googleapis.com/compute/v1/projects/devops-engineer-334019/global/firewalls/kopicloud-fw-allow-sql",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "sql"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm_instance_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/windows-sql-cloud/global/images/sql-2019-web-windows-2022-dc-v20220713",
                    "size": 50,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/devops-engineer-334019/zones/us-central1-b/disks/kopicloud-vm"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Cascade Lake",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "hostname": "kopicloud-vm.kopicloud.com",
            "id": "projects/devops-engineer-334019/zones/us-central1-b/instances/kopicloud-vm",
            "instance_id": "1580272145287368340",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n2-standard-2",
            "metadata_fingerprint": "PU12d_JyiEI=",
            "name": "kopicloud-vm",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "104.154.37.179",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/devops-engineer-334019/global/networks/kopicloud-vpc",
                "network_ip": "10.10.17.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/devops-engineer-334019/regions/us-central1/subnetworks/kopicloud-subnet",
                "subnetwork_project": "devops-engineer-334019"
              }
            ],
            "project": "devops-engineer-334019",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/devops-engineer-334019/zones/us-central1-b/instances/kopicloud-vm",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "rdp",
              "sql"
            ],
            "tags_fingerprint": "sCC_WLITvTk=",
            "zone": "us-central1-b"
          },
          "dependencies": [
            "google_compute_network.vpc",
            "google_compute_subnetwork.network_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "projects/devops-engineer-334019/global/networks/kopicloud-vpc",
            "mtu": 0,
            "name": "kopicloud-vpc",
            "project": "devops-engineer-334019",
            "routing_mode": "GLOBAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/devops-engineer-334019/global/networks/kopicloud-vpc"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "network_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-07-27T19:11:59.714-07:00",
            "gateway_address": "10.10.17.1",
            "id": "projects/devops-engineer-334019/regions/us-central1/subnetworks/kopicloud-subnet",
            "ip_cidr_range": "10.10.17.0/24",
            "name": "kopicloud-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/devops-engineer-334019/global/networks/kopicloud-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "devops-engineer-334019",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/devops-engineer-334019/regions/us-central1/subnetworks/kopicloud-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    }
  ]
}